--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "My  Pomodoro",
     "version": "1.0",
-    "description": "A Pomodoro timer extension to help you focus.",
+    "description": "A Pomodoro timer extension to help me focus.",
     "action": {
       "default_popup": "popup.html"
       
